--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "esm": "^3.2.25",
+    "handlebars": "^4.7.6",
     "inquirer": "^7.3.3",
+    "listr": "^0.14.3",
     "ncp": "^2.0.0",
+    "rimraf": "^3.0.2",
     "yargs": "^15.4.1"
   }
 }
