--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "esm": "^3.2.25",
+    "execa": "^4.0.3",
     "handlebars": "^4.7.6",
     "inquirer": "^7.3.3",
     "listr": "^0.14.3",
