--- a/templates/node/package.json
+++ b/templates/node/package.json
@@ -2,7 +2,7 @@
     "name": "{{projectName}}",
     "version": "0.1.0",
     "private":true,
-    "bin": {
+    "scripts": {
       "serve": "vue-cli-service serve",
       "build": "vue-cli-service build",
       "lint": "vue-cli-service lint"
