ensured babel not installed when not asked for

--- a/templates/node/package.json
+++ b/templates/node/package.json
@@ -31,7 +31,9 @@
         "eslint:recommended"
       ],
       "parserOptions": {
+        {{#if babel}}
         "parser": "babel-eslint"
+        {{/if babel}}
         },
       "rules": {}
     }
