--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "ncp": "^2.0.0",
     "rimraf": "^3.0.2",
     "yargs": "^15.4.1"
+  },
+  "repository": {
+    "type":"git",
+    "url": "https://github.com/Imperial-visualizations/create-impvis.git"
   }
 }
