--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Imperial-visualizations/create-impvis.git"
-  }
+  },
+  "files":[
+	"./src",
+	"./bin",
+	"./templates"
+  ]
 }
