--- a/templates/node/package.json
+++ b/templates/node/package.json
@@ -15,7 +15,7 @@
     "dependencies": {
         "core-js": "^3.6.5",
         "vue": "^2.6.11",
-        "@impvis/components":"^0.2.0"
+        "@impvis/components":"*"
     },
     "devDependencies": {
         "vue-template-compiler": "^2.6.11",
