explicitly using node to run file, to work on windows

--- a/templates/node/package.json
+++ b/templates/node/package.json
@@ -5,7 +5,7 @@
     "scripts": {
       "serve": "vue-cli-service serve",
       "build": "vue-cli-service build",
-      "postbuild": "./postbuild.js",
+      "postbuild": "node ./postbuild.js",
       "lint": "vue-cli-service lint"
     },
     "keywords": [
