--- a/templates/node/package.json
+++ b/templates/node/package.json
@@ -16,7 +16,8 @@
     "dependencies": {
         "core-js": "^3.6.5",
         "vue": "^2.6.11",
-        "@impvis/components":"*"
+        "vue-awesome":"^4.1.0",
+        "@impvis/components":"^1.0.0"
     },
     "devDependencies": {
         "vue-template-compiler": "^2.6.11",
